--- a/Contact/contact.css
+++ b/Contact/contact.css
@@ -167,7 +167,7 @@ height: 18rem;
 height: 35rem;
 }
 .grid-item3 p{
-    color: white;
+    color:  rgb(235, 194, 112);
     font-family: barlow;
     font-size: medium;
     
